<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>gwt-bean-validators</groupId>
	<artifactId>gwt-bean-validators</artifactId>
	<packaging>jar</packaging>
	<version>0.8.8</version>
	<name>GWT Bean Validators</name>

	<properties>
		<jdk.version>1.7</jdk.version>
		<!-- Convenience property to set the GWT version -->
		<gwt.version>2.7.0</gwt.version>
		<hibernate-validator.version>4.1.0.Final</hibernate-validator.version>
		<junit.version>4.12</junit.version>
		<log4j.version>1.2.17</log4j.version>
		<slf4j.version>1.7.12</slf4j.version>
		<gwt-commons-lang3.version>3.4-SNAPSHOT</gwt-commons-lang3.version>
		<gwt-commons-validator.version>1.4.1-SNAPSHOT</gwt-commons-validator.version>
		<commons-beanutils.version>1.9.2</commons-beanutils.version>
		<wagon-ssh.version>2.9</wagon-ssh.version>
		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
		<maven-source-plugin.version>2.4</maven-source-plugin.version>
		<maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
		<maven-project-info-reports-plugin.version>2.8</maven-project-info-reports-plugin.version>
		<maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
		<maven-checkstyle-plugin.version>2.16</maven-checkstyle-plugin.version>
		<checkstyle.version>6.9</checkstyle.version>
		<maven-pmd-plugin.version>3.5</maven-pmd-plugin.version>
		<findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
		<maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>de.knightsoft-net</id>
			<url>http://www.knightsoft-net.de/maven/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt</artifactId>
				<version>${gwt.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernate-validator.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernate-validator.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>gwt-commons-lang3</groupId>
			<artifactId>gwt-commons-lang3</artifactId>
			<version>${gwt-commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>gwt-commons-lang3</groupId>
			<artifactId>gwt-commons-lang3</artifactId>
			<version>${gwt-commons-lang3.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>gwt-commons-validator</groupId>
			<artifactId>gwt-commons-validator</artifactId>
			<version>${gwt-commons-validator.version}</version>
		</dependency>
		<dependency>
			<groupId>gwt-commons-validator</groupId>
			<artifactId>gwt-commons-validator</artifactId>
			<version>${gwt-commons-validator.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils.version}</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<!-- the java source files must be on the classpath during gwt:compile -->
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<!-- the java source files that override/emulate server-side classes 
					in the client must be on the classpath during gwt:compile -->
				<directory>src/main/super</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
							<goal>resources</goal>
						</goals>
					</execution>
				</executions>
				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
					documentation at codehaus.org -->
				<configuration>
					<modules>
						<module>de.knightsoftnet.validators.GwtBeanValidators</module>
					</modules>
					<logLevel>INFO</logLevel>
					<inplace>false</inplace>
					<style>OBFUSCATED</style>
					<failOnError>true</failOnError>
					<localWorkers>-1</localWorkers>
					<testTimeOut>300</testTimeOut>
					<extraJvmArgs>-Xms512m -Xmx1g -XX:MaxPermSize=256m</extraJvmArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<excludes>
						<value>**/supersource/**/*.java</value>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<skip>true</skip>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
				<executions>
					<execution>
						<id>unit-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<skip>false</skip>
							<includes>
								<include>**/*Test.java</include>
							</includes>
							<excludes>
								<exclude>**/Abstract*Test.java</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources-plugin.version}</version>
				<executions>
					<execution>
						<id>copy-localization-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<!-- this is important -->
							<overwrite>true</overwrite>
							<!-- target -->
							<outputDirectory>${basedir}/target/classes</outputDirectory>
							<resources>
								<resource>
									<!-- source -->
									<directory>src/main/resources/de/knightsoftnet/validators/client</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<attach>true</attach>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${maven-checkstyle-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>${checkstyle.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<rulesets>
						<ruleset>.ruleset</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs-maven-plugin.version}</version>
				<configuration>
					<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
				</configuration>
			</plugin>
			<!-- must be disabled, dosn't work with try-with-resource at the moment 
				<plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
				<version>${cobertura-maven-plugin.version}</version> <configuration> <formats> <format>xml</format> 
				</formats> </configuration> </plugin> -->
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>${wagon-ssh.version}</version>
			</extension>
		</extensions>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${maven-checkstyle-plugin.version}</version>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<rulesets>
						<ruleset>.ruleset</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs-maven-plugin.version}</version>
				<configuration>
					<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
				</configuration>
			</plugin>
			<!-- must be disabled, dosn't work with try-with-resource at the moment 
				<plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
				<version>${cobertura-maven-plugin.version}</version> <configuration> <formats> <format>xml</format> 
				</formats> </configuration> </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${maven-jxr-plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>

	<distributionManagement>
		<downloadUrl>http://www.knightsoft-net.de/maven/</downloadUrl>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>de.knightsoft-net</id>
			<name>KnightSoft-Net Maven Repository</name>
			<url>scp://www.knightsoft-net.de:2904/srv/www/htdocs/manfred/www.knightsoft-net.de/maven/</url>
			<layout>default</layout>
		</repository>
	</distributionManagement>

	<developers>
		<developer>
			<name>Manfred Tremmel</name>
			<id>ManfredTremmel</id>
			<email>Manfred.Tremmel@iiv.de</email>
			<roles>
				<role>Java Developer</role>
			</roles>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Valentin Pricop</name>
		</contributor>
	</contributors>
</project>
